@@ -12,48 +12,50 @@
       <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
               <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_es.html">documentación</a>
           / </span> 32 bits</h1>
-      OpenXava Studio (openxava.exe en Windows o el ejecutable openxava en
-      Mac/Linux) requiere una máquina de 64 bits para funcionar. Sin embargo,
-      puedes usar OpenXava en un ordenador de 32 bits, incluso la última
-      versión. Sólo has de descargar un Java de 32 bits y un Eclipse de 32 bits,
-      después cambia el workspace de Eclipse para que apunte al incluido en la
-      distribución de OpenXava.</div>
+      <i>Si estás usando una versión de OpenXava anterior a la 7.0 mira las <a
+          href="32-bit-ox6_es.html">instrucciones antiguas</a></i></div>
+    <div class="wiki" style="display: block;"> OpenXava Studio (openxava.exe en
+      Windows o el ejecutable openxava en Mac/Linux) requiere una máquina de 64
+      bits para funcionar. Sin embargo, puedes usar OpenXava en un ordenador de
+      32 bits, incluso la última versión. Sólo has de descargar un Java de 32
+      bits y usar Maven. Puedes usar cualquier editor de texto plano o si
+      prefieres usar un IDE, puedes descargar un Eclipse de 32 bits.</div>
     <div class="wiki" style="display: block;">
       <h2 id="toc1">Instalar Java para 32 bits</h2>
       Ve a <a href="https://www.oracle.com/java/technologies/javase/javase-jdk8-downloads.html">la
         página de descarga del JDK 8 de Oracle</a>, allí escoge una distribución
       con x86 en el nombre (o i586 en el nombre de archivo), como <i>Linux x86
         Compressed Archive</i> o <i>Windows x86</i>:</div>
-    <div class="wiki" style="display: block;"> <a href="https://www.oracle.com/java/technologies/javase-jdk11-downloads.html"
-
-        target="_blank"><img src="files/jdk8-download.png" title="jdk8-download.png"
-
+    <div class="wiki" style="display: block;"> <a href="https://www.oracle.com/java/technologies/javase-jdk11-downloads.html"
+        target="_blank"><img src="files/jdk8-download.png" title="jdk8-download.png"
           style="box-shadow: 0px 0px 5px lightgray" alt="jdk8-download.png"></a>
       <div class="wiki" style="display: block;">Descárgalo, ejecútalo y sigue
         todos los pasos para instalar el JDK en tu ordenador.</div>
       <div class="wiki" style="display: block;">
-        <h2>Descargar e instalar OpenXava</h2>
-        Descarga la última versión de OpenXava de <a href="https://www.openxava.org/">openxava.org</a>
-        y descomprímela en tu ordenador. Tendrás una carpeta llamada <i>openxava-6.x</i>
-        con tres subcarpetas: <i>doc, studio</i> y <i>workspace</i>. Vamos a
-        usar la carpeta <i>workspace</i> en la siguiente sección. También hay
-        un <i>openxava.exe</i> u <i>openxava</i> ejecutable de Linux en la
-        raíz, no lo pulses, no funciona con 32 bits.</div>
+        <h2>Descargar e instalar Maven</h2>
+        <a href="https://maven.apache.org/download.cgi"> Descarga la última
+          versión de Maven</a> de Apache
+        e instálala en tu ordenador.</div>
+      <div class="wiki" style="display: block;">
+        <h2>Crear tu primer proyecto OpenXava</h2>
+        Ahora puedes <a href="getting-started-maven_es.html">seguir la guía de
+          primeros pasos con OpenXava usando Maven</a> para crear tu primer
+        proyecto de OpenXava en tu ordenador de 32 bits. No necesitas OpenXava
+        Studio, puedes hacerlo con línea de órdenes y un editor de texto plano.
+      </div>
     </div>
     <div class="wiki" style="display: block;">
-      <h2>Descargar e instalar Eclipse </h2>
-      Eclipse 2018-09 fue el último con soporte de 32 bits, por tanto <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-win32.zip">descarga
+      <h2>Usar Eclipse </h2>
+      En lugar de usar un editor de texto puedes usar una IDE de Java, como
+      Eclipse. Eclipse 2018-09 fue el último con soporte de 32 bits, por tanto <a
+        href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-win32.zip">descarga
         Eclipse 2018-09 para Windows 32</a> o <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-linux-gtk.tar.gz">para
         Linux 32</a>. Descomprime el archivo descargado y pulsa en el ejecutable
-      <i>eclipse</i> que tienes dentro de la carpeta <i>eclipse</i>. </div>
+      <i>eclipse</i> que tienes dentro de la carpeta <i>eclipse</i>.Después usa
+      la opciones de importación de Eclipse para incluir tu proyecto OpenXava en
+      el workspace de Eclipse. Eclipse ofrece un soporte muy completo para
+      trabajar con proyectos Maven.</div>
     <div class="wiki" style="display: block;"><br>
-    </div>
-    <div class="wiki" style="display: block;">Después de arrancar sigue las
-      instrucciones para usar OpenXava con Eclipse:</div>
-    <div class="wiki" style="display: block;"> <br>
-      <b><a href="eclipse_es.html">Sigue la guía para usar Eclipse
-          con OpenXava</a></b> <br>
-      <br>
     </div>
   </body>
 </html>
